resolves alignment

--- a/assets/js/style.css
+++ b/assets/js/style.css
@@ -53,8 +53,8 @@ header {
 }
 
 .psection {
-  padding: 12vh;
-  width: 80%;
+  /* padding: 12vh; */
+  width: 100%;  /*80 */
   max-width: 960px;
   margin: 0 auto;
   box-shadow: 0 0.5em 2em rgba(black, 0.3);
